[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Pies/ButterChickenIdle0.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Pies.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Pies/ButterChickenIdle2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Pies/ButterChickenIdle3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Pies/ButterChickenIdle1.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 32.0

[node name="PieButterChicken" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_PieButterChicken_body_entered"]
